// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BxIcons render BxIcons component 1`] = `
<svg
  data-testid="iconBase"
  fill="none"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clip-rule="inherit"
    d="M13.386 5.59H5l2.2-2.186a.807.807 0 00-.027-1.177.907.907 0 00-1.228.025L2.244 5.918a.801.801 0 00.009 1.16l3.693 3.514a.908.908 0 001.237 0 .8.8 0 000-1.177l-2.27-2.16h8.481c3.79 0 6.874 2.933 6.874 6.54 0 3.606-3.083 6.54-6.874 6.54h-3.092c-.486 0-.875.37-.875.833 0 .462.389.832.875.832h3.084C18.139 22 22 18.318 22 13.803c.009-4.53-3.861-8.213-8.614-8.213z"
    fill="currentColor"
    fill-rule="inherit"
  />
</svg>
`;

exports[`BxIcons render BxIcons with more props 1`] = `
<svg
  color="red"
  data-testid="iconBase"
  fill="none"
  height="30"
  viewBox="0 0 24 24"
  width="30"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clip-rule="inherit"
    d="M13.386 5.59H5l2.2-2.186a.807.807 0 00-.027-1.177.907.907 0 00-1.228.025L2.244 5.918a.801.801 0 00.009 1.16l3.693 3.514a.908.908 0 001.237 0 .8.8 0 000-1.177l-2.27-2.16h8.481c3.79 0 6.874 2.933 6.874 6.54 0 3.606-3.083 6.54-6.874 6.54h-3.092c-.486 0-.875.37-.875.833 0 .462.389.832.875.832h3.084C18.139 22 22 18.318 22 13.803c.009-4.53-3.861-8.213-8.614-8.213z"
    fill="currentColor"
    fill-rule="inherit"
  />
</svg>
`;
